Fix school profile photo overflow
As far as I can tell, the next/prev photo buttons never actually worked, so
I've removed them.

--- a/static/css/responsive.scss
+++ b/static/css/responsive.scss
@@ -234,6 +234,15 @@
     }
   }
 
+  section#school-top {
+    margin-top: $pad-v;
+
+    #school-photos-frame {
+      width: 100%;
+      overflow-x: auto;
+    }
+  }
+
   .footer-meta > div {
     display: block;
     padding: 0 $pad-h;
